# tuple_arithmetic

./: .gitignore  CMakeLists.txt  LICENSE  README.md
simd_tests/: CMakeLists.txt
simd_tests/test_simd/: test_simd.cpp
simd_tests/test_simd_op/: .test_simd_op.cpp.swp  test_simd_op.cpp
tests/: CMakeLists.txt
tests/test_assign/: test_assign.cpp
tests/test_binary_op/: test_binary_op.cpp
tests/test_const_tuple/: test_const_tuple.cpp
tests/test_math/: test_math.cpp
tests/test_ptr_tuple/: test_ptr_tuple.cpp
tests/test_reduce_op/: test_reduce_op.cpp
tests/test_ternary_op/: test_ternary_op.cpp
tests/test_unary_op/: test_unary_op.cpp
tuple_arithmetic/: tuple_arithmetic.hpp  tuple_math.hpp
tuple_arithmetic/tpa_basic/: assign.hpp  basics.hpp  binary_op.hpp  const_tuple.hpp  defines.hpp  functions.hpp  other.hpp  ptr_tuple.hpp  reduce_op.hpp  ternary_op.hpp  unary_op.hpp  undefine.hpp
tuple_arithmetic/tpa_simd/: xsimd_cast.hpp  xsimd_math.hpp  xsimd_tpa_op.hpp
