find_package(Catch2 QUIET)
if(Catch2_FOUND)
    file(GLOB TEST_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} */*.cpp)
    foreach(testSrc ${TEST_SOURCES})
        get_filename_component(testName ${testSrc} NAME_WE)
        add_executable(${testName} ${testSrc})
        target_include_directories(${testName} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
        target_link_libraries(${testName} Catch2::Catch2WithMain)
        add_test(NAME ${testName} COMMAND ${testName} -s)
    endforeach(testSrc)
    add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} -C $<CONFIGURATION> --output-on-failure)
else()
    message(WARNING "Catch2 not found, tests will be skipped")
endif()
